--- a/src/index.html
+++ b/src/index.html
@@ -701,26 +701,26 @@
   <div class="container mx-auto px-8 sm:px-14 md:px-16 lg:px-24 xl:px-28 2xl:px-32">
     <section class="more-on-youtube lg:w-full py-10 lg:py-20" id="more-on-youtube">
 
-      <p class="uppercase font-sf text-xs lg:text-xs lg:tracking-wider lg:mb-7 dark:text-white">more on youtube...</p>
+      <p class="uppercase font-sf text-xs lg:text-sm xl:text-base lg:tracking-wider lg:mb-7 dark:text-white">more on youtube...</p>
 
-      <div class="div overflow-hidden relative lg:h-48 flex justify-between md:items-center mt-5">
+      <div class="div overflow-hidden relative lg:h-48 xl:h-56 flex justify-between xl:space-x-10 md:items-center mt-5">
         <!-- Blocks for big screens -->
-        <div class="blocks hidden md:flex items-center md:-ml-10">
-          <div class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 md:h-32 md:-mb-48 md:-mt-20 lg:mb-0 lg:mt-10"></div>
-          <div class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 md:h-80 md:-mb-40 md:-mt-28 lg:mb-0 lg:mt-0 md:ml-16 md:mr-8 lg:ml-20 lg:mr-6"></div>
-          <div class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 md:h-32 md:-mb-48 md:-mt-20 lg:mb-0 lg:mt-32"></div>
+        <div class="blocks hidden md:flex items-center md:-ml-10 xl:-ml-12">
+          <div class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 xl:w-20 md:h-32 xl:h-40 md:-mb-48 md:-mt-20 lg:mb-0 lg:mt-10"></div>
+          <div class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 xl:w-20 md:h-80 xl:h-88 md:-mb-40 md:-mt-28 lg:mb-0 lg:mt-0 md:ml-16 md:mr-8 lg:ml-20 lg:mr-6 xl:ml-24 xl:mr-10"></div>
+          <div class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 xl:w-20 md:h-32 xl:h-40 md:-mb-48 md:-mt-20 lg:mb-0 lg:mt-32"></div>
         </div>
 
-        <div class="texts py-5 sm:py-7 lg:py-3 px-5 sm:px-7 lg:px-0 md:w-1/2 md:mr-5 lg:mr-10 z-50">
-          <p class="name capitalize font-caudex font-semibold text-base sm:text-lg md:text-2xl lg:text-3xl dark:text-white">
+        <div class="texts py-5 sm:py-7 lg:py-3 xl:py-6 px-5 sm:px-7 lg:px-0 md:w-1/2 md:mr-5 lg:mr-10 z-50">
+          <p class="name capitalize font-caudex font-semibold text-base sm:text-lg md:text-2xl lg:text-3xl xl:text-base4xl dark:text-white">
             ozenua oluwatobi john
           </p>
 
-          <p class="details font-sf text-primary py-2 lg:py-2 text-xs lg:text-sm leading-5 lg:leading-6">
+          <p class="details font-sf text-primary py-2 lg:py-2 xl:py-4 text-xs lg:text-sm xl:text-base leading-5 lg:leading-6 xl:pr-28">
             Amet minim mollit non deserunt ullamco est sit aliqua dolor sint. Velit officia consequat duis enim velit mollit.
           </p>
 
-          <p class="subscribe text-xs lg:text-sm"><a href="#">Subscribe</a></p>
+          <p class="subscribe text-xs lg:text-sm xl:text-base"><a href="#">Subscribe</a></p>
         </div>
 
         <!-- Blocks for small screens -->
@@ -736,23 +736,23 @@
     </section>
   </div>
 
-  <footer class="bg-gray-200 dark:bg-black lg:px-16 py-14 lg:py-24 mt-24">
+  <footer class="bg-gray-200 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 mt-24">
     <div class="container mx-auto px-4 sm:px-8">
-      <div class="first-container md:flex justify-between items-end space-y-10 lg:space-y-0 py-8">
-        <div class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5">
-          <p class="got-an-idea font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl">
+      <div class="first-container md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
+        <div class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
+          <p class="got-an-idea font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl">
             Got an idea?
           </p>
 
           <p>
-            <a class="lets-talk font-sf text-black dark:text-white text-base sm:text-xl lg:text-xl" href="#">
+            <a class="lets-talk font-sf text-black dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl" href="#">
               Let's talk about it.
             </a>
           </p>
         </div>
 
-        <div class="contacts font-sf md:w-2/4 text-black dark:text-white text-xs">
-          <div class="grid grid-cols-4 gap-y-3 text-xs lg:text-base items-center">
+        <div class="contacts font-sf md:w-2/4 text-black dark:text-white text-xs lg:text-sm xl:text-base">
+          <div class="grid grid-cols-4 gap-y-3 xl:gap-y-7 text-xs lg:text-base items-center">
             <a class="instagram-footer-link" href="#">Instagram</a>
             <a class="youtube-footer-link" href="#">Youtube</a>
             <a class="dribble-footer-link" href="#">Dribble</a>
