--- a/src/paysure.html
+++ b/src/paysure.html
@@ -48,12 +48,13 @@
         </nav>
 
         <section class="header space-y-7 py-10 lg:py-16">
-            <p class="header-text -black dark:text-white font-caudex text-xl lg:text-lg4xl">
+            <p class="header-text -black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl">
                 Pay sure
             </p>
 
-            <div class="case-studies w-full flex items-center py-5">
-                <ul class="case-study-list font-sf w-full text-xs text-primary flex justify-between align-center">
+            <div class="case-studies w-full flex items-center py-5 sm:py-6 lg:py-7">
+                <ul
+                    class="case-study-list font-sf w-full text-xs sm:text-sm text-primary flex justify-between align-center">
                     <li>UX Reasearch</li>
                     <li>UI Design</li>
                     <li>Visual Design</li>
@@ -63,24 +64,24 @@
         </section>
 
         <section class="crptly mt-10">
-            <div class="overview space-y-5">
+            <div class="overview space-y-5 sm:space-y-6">
                 <p class="overview-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl lg:py-10">
                     Overview
                 </p>
 
-                <p class="overview-details-text font-sf text-primary text-sm">
+                <p class="overview-details-text font-sf text-primary text-sm sm:leading-6">
                     Pay sure is a uitility payment playform that brings daily life expenses and transactions close to
                     its users. It provides
                     a seamless means of taking care of recurring bills and expenses.
                 </p>
             </div>
 
-            <div class="the-problem mt-24 space-y-5">
+            <div class="the-problem mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="the-problem-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                     The problem
                 </p>
 
-                <p class="the-problem-details-text font-sf text-primary text-sm lg:mt-10">
+                <p class="the-problem-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10">
                     Keeping up with expenses could be very painstaking due to the number of needs we have in our daily
                     life, it is only
                     important that there are easier ways to both manage and cater for these needs without been caught
@@ -89,16 +90,16 @@
                 </p>
             </div>
 
-            <div class="goals mt-24 space-y-5">
+            <div class="goals mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="goal-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Goals</p>
 
-                <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:mt-10 lg:ml-5">
+                <ol class="list-decimal ml-4 font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:ml-5">
                     <li>Create an all in one payment platform for all bills and expenses.</li>
                     <li>Design a more user friendly design that top competition.</li>
                 </ol>
             </div>
 
-            <div class="design-process mt-24 space-y-5">
+            <div class="design-process mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="design-process-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Design
                     process</p>
 
@@ -108,7 +109,7 @@
                 </div>
             </div>
 
-            <div class="userflow mt-24 space-y-5">
+            <div class="userflow mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="userflow-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">User flow</p>
 
                 <div class="userflow-images">
@@ -117,11 +118,11 @@
                 </div>
             </div>
 
-            <div class="wireframes mt-24 space-y-5">
+            <div class="wireframes mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="wireframes-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Wireframes
                 </p>
 
-                <p class="wireframes-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
+                <p class="wireframes-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:mb-7">
                     Wireframes help me focus on key functions, elements, and actions before starting the visual design.
                     I created
                     High-Fidelity wireframes using some dummy texts and icons where needed.
@@ -135,12 +136,13 @@
                 </div>
             </div>
 
-            <div class="colors-and-typography mt-24 space-y-5">
+            <div class="colors-and-typography mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="colors-and-typography-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                     Colors and
                     Typography</p>
 
-                <p class="colors-and-typography-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
+                <p
+                    class="colors-and-typography-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:mb-7">
                     Designing the visuals became very interesting after being able to validate the wireframes with
                     potential testers of the app. I proceeded to design a simple design style guide for the application.
                 </p>
@@ -153,11 +155,11 @@
                 </div>
             </div>
 
-            <div class="visual-design mt-24 lg:my-40 space-y-5">
+            <div class="visual-design mt-24 md:mt-30 lg:my-40 space-y-5 sm:space-y-6">
                 <p class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Visual
                     Design</p>
 
-                <p class="visual-design-details-text font-sf text-primary text-sm">
+                <p class="visual-design-details-text font-sf text-primary text-sm sm:leading-6">
                     After several rounds of iterations on the wireframe, we designed the high-fidelity screens.
                 </p>
 
@@ -173,11 +175,11 @@
                 </div>
             </div>
 
-            <div class="conclusion mt-24 space-y-5">
+            <div class="conclusion mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Conclusion
                 </p>
 
-                <p class="conclusion-details font-sf text-primary text-sm lg:my-8">
+                <p class="conclusion-details font-sf text-primary text-sm sm:leading-6 lg:my-8">
                     The UI design was framed based on data collected over a long period of time and multiple test
                     sessions. The design was
                     made to be minimal, well organized flows, and feature centered to meet the users needs. As a result,
@@ -190,10 +192,10 @@
         </section>
     </div>
 
-    <footer class="bg-black lg:px-16 py-14 lg:py-24 mt-24">
+    <footer class="bg-black lg:px-16 py-14 lg:py-24 mt-24 md:mt-30">
         <div class="container mx-auto px-4">
             <div class="first-container lg:flex justify-between items-end space-y-10 lg:space-y-0 py-8">
-                <div class="texts-container flex lg:block items-baseline space-x-2 lg:space-y-5">
+                <div class="texts-container flex lg:block items-baseline space-x-2 lg:space-y-5 sm:space-y-6">
                     <p class="got-an-idea font-caudex text-black dark:text-white text-2xl lg:text-5xl">
                         Got an idea?
                     </p>
