--- a/src/gtworld.html
+++ b/src/gtworld.html
@@ -48,12 +48,13 @@
         </nav>
 
         <section class="header space-y-7 py-10 lg:py-16">
-            <p class="header-text text-black dark:text-white font-caudex text-xl lg:text-lg4xl">
+            <p class="header-text text-black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl">
                 GTBank : A new way to bank.
             </p>
 
-            <div class="case-studies w-full flex items-center py-5">
-                <ul class="case-study-list font-sf w-full text-xs text-primary flex justify-between align-center">
+            <div class="case-studies w-full flex items-center py-5 sm:py-6 lg:py-7">
+                <ul
+                    class="case-study-list font-sf w-full text-xs sm:text-sm text-primary flex justify-between align-center">
                     <li>UX Reasearch</li>
                     <li>UI Design</li>
                     <li>Visual Design</li>
@@ -63,7 +64,7 @@
         </section>
 
         <section class="gtworld mt-10">
-            <div class="about-gtbank space-y-5">
+            <div class="about-gtbank space-y-5 sm:space-y-6">
                 <a href="../assets/images/welcome image.png"><img class="rounded-2xl lg:rounded-3xl"
                         src="../assets/images/welcome image.png" alt=""></a>
 
@@ -72,7 +73,7 @@
                     About GTBank
                 </p>
 
-                <p class="about-gtworld-details-text font-sf text-primary text-sm">
+                <p class="about-gtworld-details-text font-sf text-primary text-sm sm:leading-6">
                     The bank’s reliable conveyance of innovative financial arrangements and excellent client support has
                     empowered it to
                     record yearly development in the number of customers and key financial files since the beginning.
@@ -96,7 +97,7 @@
                     transactions.
                 </p>
 
-                <p class="about-gtworld-details-text font-sf text-primary text-sm lg:mt-10">
+                <p class="about-gtworld-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10">
                     Gtbank today is one of the top 5 banks in Nigeria and undoubtedly has the largest youth
                     concentration in
                     Nigeria and one
@@ -112,10 +113,10 @@
                 </p>
             </div>
 
-            <div class="goal mt-24 space-y-5">
+            <div class="goal mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="goal-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Goal</p>
 
-                <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:mt-10 lg:ml-5">
+                <ol class="list-decimal ml-4 font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:ml-5">
                     <li>Identify usability issues through research.</li>
                     <li>Create and validate Assumptions.</li>
                     <li>Improve the design and user experience.</li>
@@ -124,7 +125,7 @@
                 </ol>
             </div>
 
-            <div class="design-process mt-24 space-y-5">
+            <div class="design-process mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="design-process-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Design
                     process</p>
 
@@ -134,13 +135,13 @@
                 </div>
             </div>
 
-            <div class="dicovering-the-problem mt-24 space-y-5">
+            <div class="dicovering-the-problem mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p
                     class="dicovering-the-problem-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                     Descovering the
                     problem</p>
 
-                <p class="discovering-the-problem-details-text font-sf text-primary text-sm lg:mt-10">
+                <p class="discovering-the-problem-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10">
                     A user-friendly app is meant to be learnable with the smallest effort invested, unfortunately, the
                     GTWorld app is a bit
                     difficult to use, especially when looking for new features to explore. While I was using the app, I
@@ -156,7 +157,7 @@
                     reported by users are listed below:
                 </p>
 
-                <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:mt-10 lg:ml-5">
+                <ol class="list-decimal ml-4 font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:ml-5">
                     <li>Increased volume of transactional errors.</li>
                     <li>The app goes blank and that gets users confused.</li>
                     <li>Navigating around the app is tasking.</li>
@@ -174,7 +175,7 @@
                             class="lg:my-7" src="../assets/images/customer reviews.png" alt=""></a>
                 </div>
 
-                <p class="in-addition-text font-sf text-primary text-sm">
+                <p class="in-addition-text font-sf text-primary text-sm sm:leading-6">
                     In addition to this, I also set simple tasks for the users to perform to know if they will be able
                     to
                     seamlessly perform
@@ -185,7 +186,7 @@
                     discovered these pain points during the course of the interview.
                 </p>
 
-                <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:my-10 lg:ml-5">
+                <ol class="list-decimal ml-4 font-sf text-primary text-sm sm:leading-6 lg:my-10 lg:ml-5">
                     <li>Users had to pause once they are successfully logged in to find menu options despite using the
                         application before.</li>
                     <li>Users reportedly conmplained about some part of the app going blank whenever you click on text
@@ -194,7 +195,7 @@
                     <li>The payment page doesn't seem to be intuitive</li>
                 </ol>
 
-                <p class="further-addition-text font-sf text-primary text-sm">
+                <p class="further-addition-text font-sf text-primary text-sm sm:leading-6">
                     To further validate my research, I went on to the google play store app to check out what users of
                     the
                     app
@@ -203,12 +204,12 @@
                 </p>
             </div>
 
-            <div class="who-are-the-users mt-24 space-y-5">
+            <div class="who-are-the-users mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="who-are-the-users-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Who
                     are the users
                 </p>
 
-                <p class="who-are-the-users-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
+                <p class="who-are-the-users-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:mb-7">
                     Based on the interviews I carried out, I was able to draw out two different kinds of users on my
                     mobile
                     app and they are
@@ -222,7 +223,7 @@
                             src="../assets/images/customer jane.png" alt=""></a>
                 </div>
 
-                <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:mt-10 lg:ml-5">
+                <ol class="list-decimal ml-4 font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:ml-5">
                     <li>The home screen experience.</li>
                     <li>Create a flow in which AR feature will be functional.</li>
                     <li>Improve the major UI components of the app to suit the futuristic design.</li>
@@ -230,10 +231,10 @@
                 </ol>
             </div>
 
-            <div class="solution mt-24 space-y-5">
+            <div class="solution mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="solution-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Solution</p>
 
-                <p class="solution-details-text font-sf text-primary text-sm lg:my-10">
+                <p class="solution-details-text font-sf text-primary text-sm sm:leading-6 lg:my-10">
                     After the problem discovery and validation using these research methods, I start creating solutions
                     for
                     the problems,
@@ -243,7 +244,7 @@
                     with a compilation of problems I will be solving in this design.
                 </p>
 
-                <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:ml-5">
+                <ol class="list-decimal ml-4 font-sf text-primary text-sm sm:leading-6 lg:ml-5">
                     <li>Create a seamless onboarding process.</li>
                     <li>Create a well-prepared design style guide for future expansion.</li>
                     <li>Give users intuitive home screens that make the app learnable.</li>
@@ -252,10 +253,10 @@
                 </ol>
             </div>
 
-            <div class="userflow mt-24 space-y-5">
+            <div class="userflow mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="userflow-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">User flow</p>
 
-                <p class="userflow-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
+                <p class="userflow-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:mb-7">
                     To better the experience, I will be working on creating simpler flows for the onboarding, major
                     features, and other
                     hidden features that could be helpful for users. By creating simple user flows, I will be able to
@@ -268,7 +269,7 @@
                             src="../assets/images/userflow 1.png" alt=""></a>
                 </div>
 
-                <p class="further-userflow-details-text font-sf text-primary text-sm lg:my-7">
+                <p class="further-userflow-details-text font-sf text-primary text-sm sm:leading-6 lg:my-7">
                     After creating the information architecture for the app, I was able to narrow down the flows and
                     core
                     features for the
@@ -281,10 +282,10 @@
                 </div>
             </div>
 
-            <div class="sketches mt-24 space-y-5">
+            <div class="sketches mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="sketches-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Sketches</p>
 
-                <p class="sketches-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
+                <p class="sketches-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:mb-7">
                     After completing the finished designing the user flow, I make sketches on the app interface on
                     paper,
                     creating a
@@ -297,11 +298,11 @@
                 </div>
             </div>
 
-            <div class="wireframes mt-24 space-y-5">
+            <div class="wireframes mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="wireframes-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Wireframes
                 </p>
 
-                <p class="wireframes-deatails-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
+                <p class="wireframes-deatails-text font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:mb-7">
                     Wireframes help me focus on key functions, elements, and actions before starting the visual design.
                     I
                     created
@@ -314,11 +315,11 @@
                 </div>
             </div>
 
-            <div class="visual-design mt-24 space-y-5">
+            <div class="visual-design mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Visual
                     Design</p>
 
-                <p class="visual-design-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
+                <p class="visual-design-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:mb-7">
                     Designing the visuals became very interesting after being able to validate the wireframes with
                     potential
                     testers of the
@@ -331,11 +332,11 @@
                 </div>
             </div>
 
-            <div class="splash-screen mt-24 space-y-5">
+            <div class="splash-screen mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="splash-screen-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                     Splashscreen</p>
 
-                <p class="splash-screen-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
+                <p class="splash-screen-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:mb-7">
                     Making a bank application friendlier would most likely improve users' trust in the application, as
                     the
                     app is perceived
@@ -348,11 +349,11 @@
                 </div>
             </div>
 
-            <div class="onboarding mt-24 space-y-5">
+            <div class="onboarding mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="onboarding-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Onboarding
                 </p>
 
-                <p class="onboarding-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
+                <p class="onboarding-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:mb-7">
                     The onboarding process on the app was a pain as forms were confusing and mostly leaves the users
                     clueless on what
                     direction to take. So we focused on improving that experience by providing conventional flows and
@@ -367,13 +368,13 @@
                 </div>
             </div>
 
-            <div class="navigation-and-homepage mt-24 space-y-5 lg:grid grid-cols-2">
-                <div class="texts space-y-5 lg:pr-10">
+            <div class="navigation-and-homepage mt-24 md:mt-30 space-y-5 sm:space-y-6 md:grid grid-cols-2 md:gap-x-10 md:place-items-center lg:gap-x-0">
+                <div class="texts space-y-5 sm:space-y-6 lg:pr-10">
                     <p class="navigation-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                         Navigation and Home
                         page</p>
 
-                    <p class="navigation-details-text font-sf text-primary text-sm lg:my-8">
+                    <p class="navigation-details-text font-sf text-primary text-sm sm:leading-6 lg:my-8">
                         The existing homepage design on the app was full of clusters of unused items and confusing app
                         navigation. This was
                         highlighted to be one of the app's pain points as users were unable to locate key features
@@ -392,11 +393,11 @@
                 </div>
             </div>
 
-            <div class="error-handling mt-24 space-y-5">
+            <div class="error-handling mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="error-handling-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Error
                     handling</p>
 
-                <p class="error-handling-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
+                <p class="error-handling-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:mb-7">
                     Several times when using the app there tends to be situations when the app suddenly stops working
                     and
                     users don't know
@@ -412,7 +413,7 @@
                 </div>
             </div>
 
-            <div class="better-visual-design mt-24 space-y-5">
+            <div class="better-visual-design mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="header-textfont-caudex text-black dark:text-white text-xl lg:text-2xl">Better Visual Design
                 </p>
 
@@ -428,11 +429,11 @@
                 </div>
             </div>
 
-            <div class="conclusion mt-24 space-y-5">
+            <div class="conclusion mt-24 md:mt-30 space-y-5 sm:space-y-6">
                 <p class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Conclusion
                 </p>
 
-                <p class="conclusion-details font-sf text-primary text-sm lg:my-8">
+                <p class="conclusion-details font-sf text-primary text-sm sm:leading-6 lg:my-8">
                     The focus of this redesign was centered around delivering an all-new experience on the GTBank
                     application. Based on the
                     research and feedback I had gathered, it was certain that the UI of the app was one of the major
@@ -448,7 +449,7 @@
                     after testing the design out with some users
                 </p>
 
-                <p class="conclusion-details font-sf text-primary text-sm lg:mt-8">
+                <p class="conclusion-details font-sf text-primary text-sm sm:leading-6 lg:mt-8">
                     I am happy I was able to work on a project like this, I enjoyed every brainstorming session I had
                     with
                     my partner on
@@ -458,17 +459,17 @@
                     feedback throughout the entire design process.
                 </p>
 
-                <p class="conclusion-details font-sf text-primary text-sm lg:mt-10">
+                <p class="conclusion-details font-sf text-primary text-sm sm:leading-6 lg:mt-10">
                     I would love to work on a web version of the GTBank app as that as well needs a total revamp.
                 </p>
             </div>
         </section>
     </div>
 
-    <footer class="bg-gray-200 dark:bg-black lg:px-16 py-14 lg:py-24 mt-24">
+    <footer class="bg-gray-200 dark:bg-black lg:px-16 py-14 lg:py-24 mt-24 md:mt-30">
         <div class="container mx-auto px-4">
             <div class="first-container lg:flex justify-between items-end space-y-10 lg:space-y-0 py-8">
-                <div class="texts-container flex lg:block items-baseline space-x-2 lg:space-y-5">
+                <div class="texts-container flex lg:block items-baseline space-x-2 lg:space-y-5 sm:space-y-6">
                     <p class="got-an-idea font-caudex text-black dark:text-white text-2xl lg:text-5xl">
                         Got an idea?
                     </p>
