--- a/src/paysure.html
+++ b/src/paysure.html
@@ -19,15 +19,15 @@
     <div class="container mx-auto px-7 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
         <nav>
             <div
-                class="nav-container font-sf text-black dark:text-white py-4 lg:py-7 flex justify-between items-center tracking-widest">
+                class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 xl:py-9 2xl:py-12 flex justify-between items-center tracking-widest">
                 <div class="logo">
-                    <p class="text-tiny lg:text-tiny">
+                    <p class="text-tiny lg:text-tiny xl:text-xs">
                         <a href="index.html">OZENUA OLUWATOBI</a>
                     </p>
                 </div>
 
-                <div class="navlist hidden lg:block lg:w-60">
-                    <ul class="flex justify-between border items-center text-center lg:text-tiny">
+                <div class="navlist hidden lg:block lg:w-60 xl:w-72">
+                    <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs">
                         <li><a href="#">CONTACT ME</a></li>
                         <li><a href="#">CASES</a></li>
                         <li><a href="#">RESUME</a></li>
@@ -47,41 +47,45 @@
             </div>
         </nav>
 
-        <section class="header space-y-7 py-10 lg:py-16">
-            <p class="header-text -black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl">
+        <section class="header space-y-7 py-10 lg:py-16 xl:py-10">
+            <p
+                class="header-text -black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl">
                 Pay sure
             </p>
 
             <div class="case-studies w-full flex items-center py-5 sm:py-6 lg:py-7">
                 <ul
-                    class="case-study-list font-sf w-full text-xs sm:text-sm text-primary flex justify-between align-center">
+                    class="case-study-list font-sf w-full text-xs sm:text-sm lg:text-base xl:text-lg text-primary flex justify-between align-center">
                     <li>UX Reasearch</li>
                     <li>UI Design</li>
                     <li>Visual Design</li>
-                    <li class="lg:mr-44">Prototype</li>
+                    <li class="lg:mr-28">Prototype</li>
                 </ul>
             </div>
         </section>
 
         <section class="crptly mt-10">
             <div class="overview space-y-5 sm:space-y-6">
-                <p class="overview-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl lg:py-10">
+                <p class="overview-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Overview
                 </p>
 
-                <p class="overview-details-text font-sf text-primary text-sm sm:leading-6">
+                <p
+                    class="overview-details-text font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8">
                     Pay sure is a uitility payment playform that brings daily life expenses and transactions close to
                     its users. It provides
                     a seamless means of taking care of recurring bills and expenses.
                 </p>
             </div>
 
-            <div class="the-problem mt-24 md:mt-30 space-y-5 sm:space-y-6">
-                <p class="the-problem-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
+            <div class="the-problem mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+                <p
+                    class="the-problem-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     The problem
                 </p>
 
-                <p class="the-problem-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10">
+                <p
+                    class="the-problem-details-text font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:mt-10">
                     Keeping up with expenses could be very painstaking due to the number of needs we have in our daily
                     life, it is only
                     important that there are easier ways to both manage and cater for these needs without been caught
@@ -90,96 +94,120 @@
                 </p>
             </div>
 
-            <div class="goals mt-24 md:mt-30 space-y-5 sm:space-y-6">
-                <p class="goal-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Goals</p>
+            <div class="goals mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+                <p class="goal-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">Goals
+                </p>
 
-                <ol class="list-decimal ml-4 font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:ml-5">
+                <ol
+                    class="list-decimal ml-4 font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:mt-10 lg:ml-5">
                     <li>Create an all in one payment platform for all bills and expenses.</li>
                     <li>Design a more user friendly design that top competition.</li>
                 </ol>
             </div>
 
-            <div class="design-process mt-24 md:mt-30 space-y-5 sm:space-y-6">
-                <p class="design-process-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Design
+            <div class="design-process mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+                <p
+                    class="design-process-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    Design
                     process</p>
 
                 <div class="design-process-image">
-                    <a href="../assets/images/design process.png"><img class="rounded-2xl lg:rounded-3xl"
-                            class="rounded-2xl" src="../assets/images/design process.png" alt="" class="lg:mt-8"></a>
+                    <a href="../assets/images/design process.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/design process.png" alt=""
+                            class="lg:mt-8"></a>
                 </div>
             </div>
 
-            <div class="userflow mt-24 md:mt-30 space-y-5 sm:space-y-6">
-                <p class="userflow-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">User flow</p>
+            <div class="userflow mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+                <p class="userflow-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    User flow</p>
 
                 <div class="userflow-images">
-                    <a href="../assets/images/userflow 1.png"><img class="rounded-2xl lg:rounded-3xl"
-                            class="rounded-2xl" src="../assets/images/userflow 1.png" alt=""></a>
+                    <a href="../assets/images/userflow 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/userflow 1.png" alt=""></a>
                 </div>
             </div>
 
-            <div class="wireframes mt-24 md:mt-30 space-y-5 sm:space-y-6">
-                <p class="wireframes-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Wireframes
+            <div class="wireframes mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+                <p
+                    class="wireframes-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    Wireframes
                 </p>
 
-                <p class="wireframes-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:mb-7">
+                <p
+                    class="wireframes-details-text font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:mt-10 lg:mb-7">
                     Wireframes help me focus on key functions, elements, and actions before starting the visual design.
                     I created
                     High-Fidelity wireframes using some dummy texts and icons where needed.
                 </p>
 
-                <div class="wireframes-image space-y-3">
-                    <a href="../assets/images/wireframes.png"><img class="rounded-2xl lg:rounded-3xl"
-                            class="rounded-2xl" src="../assets/images/wireframes.png" alt=""></a>
-                    <a href="../assets/images/wireframes.png"><img class="rounded-2xl lg:rounded-3xl"
-                            class="rounded-2xl" src="../assets/images/wireframes.png" alt=""></a>
+                <div class="wireframes-image space-y-3 lg:space-y-5">
+                    <div class="wireframes-image">
+                        <a href="../assets/images/wireframes.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/wireframes.png" alt=""></a>
+                    </div>
+                    <div class="wireframes-image">
+                        <a href="../assets/images/wireframes.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/wireframes.png" alt=""></a>
+                    </div>
                 </div>
             </div>
 
-            <div class="colors-and-typography mt-24 md:mt-30 space-y-5 sm:space-y-6">
-                <p class="colors-and-typography-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
+            <div class="colors-and-typography mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+                <p
+                    class="colors-and-typography-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Colors and
                     Typography</p>
 
                 <p
-                    class="colors-and-typography-details-text font-sf text-primary text-sm sm:leading-6 lg:mt-10 lg:mb-7">
+                    class="colors-and-typography-details-text font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:mt-10 lg:mb-7">
                     Designing the visuals became very interesting after being able to validate the wireframes with
                     potential testers of the app. I proceeded to design a simple design style guide for the application.
                 </p>
 
-                <div class="colors-and-typography-image space-y-3">
-                    <a href="../assets/images/onboarding.png"><img class="rounded-2xl lg:rounded-3xl"
-                            class="rounded-2xl" src="../assets/images/onboarding.png" alt=""></a>
-                    <a href="../assets/images/onboarding.png"><img class="rounded-2xl lg:rounded-3xl"
-                            class="rounded-2xl" src="../assets/images/onboarding.png" alt=""></a>
+                <div class="colors-and-typography-image space-y-3 lg:space-y-5">
+                    <div class="colors-and-typography-image">
+                        <a href="../assets/images/onboarding.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/onboarding.png" alt=""></a>
+                    </div>
+                    <div class="colors-and-typography-image">
+                        <a href="../assets/images/onboarding.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/onboarding.png" alt=""></a>
+                    </div>
                 </div>
             </div>
 
-            <div class="visual-design mt-24 md:mt-30 lg:my-40 space-y-5 sm:space-y-6">
-                <p class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Visual
+            <div class="visual-design mt-24 md:mt-32 xl:mt-40 lg:my-40 space-y-5 sm:space-y-6">
+                <p
+                    class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    Visual
                     Design</p>
 
-                <p class="visual-design-details-text font-sf text-primary text-sm sm:leading-6">
+                <p
+                    class="visual-design-details-text font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8">
                     After several rounds of iterations on the wireframe, we designed the high-fidelity screens.
                 </p>
 
-                <div class="visual-design-images w-full space-y-3">
-                    <img class="rounded-2xl lg:rounded-3xl" class="rounded-2xl"
+                <div class="visual-design-images w-full space-y-3 lg:space-y-5">
+                    <img class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
                         src="../assets/images/gt visual design 1.png" alt="">
-                    <img class="rounded-2xl lg:rounded-3xl" class="rounded-2xl"
+                    <img class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
                         src="../assets/images/gt visual design 2.png" alt="">
-                    <img class="rounded-2xl lg:rounded-3xl" class="rounded-2xl"
+                    <img class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
                         src="../assets/images/gt visual design 1.png" alt="">
-                    <img class="rounded-2xl lg:rounded-3xl" class="rounded-2xl"
+                    <img class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
                         src="../assets/images/gt visual design 2.png" alt="">
                 </div>
             </div>
 
-            <div class="conclusion mt-24 md:mt-30 space-y-5 sm:space-y-6">
-                <p class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Conclusion
+            <div class="conclusion mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+                <p
+                    class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    Conclusion
                 </p>
 
-                <p class="conclusion-details font-sf text-primary text-sm sm:leading-6 lg:my-8">
+                <p
+                    class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:my-8">
                     The UI design was framed based on data collected over a long period of time and multiple test
                     sessions. The design was
                     made to be minimal, well organized flows, and feature centered to meet the users needs. As a result,
@@ -192,28 +220,33 @@
         </section>
     </div>
 
-    <footer class="bg-black lg:px-16 py-14 lg:py-24 mt-24 md:mt-30">
-        <div class="container mx-auto px-4">
-            <div class="first-container lg:flex justify-between items-end space-y-10 lg:space-y-0 py-8">
-                <div class="texts-container flex lg:block items-baseline space-x-2 lg:space-y-5 sm:space-y-6">
-                    <p class="got-an-idea font-caudex text-black dark:text-white text-2xl lg:text-5xl">
+    <footer class="bg-gray-200 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 mt-24">
+        <div class="container mx-auto px-4 sm:px-8">
+            <div
+                class="first-container md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
+                <div
+                    class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
+                    <p
+                        class="got-an-idea font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl">
                         Got an idea?
                     </p>
-
-                    <p class="lets-talk font-sf text-black dark:text-white text-base lg:text-xl">
-                        Let's talk about it.
+    
+                    <p>
+                        <a class="lets-talk font-sf text-black dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl"
+                            href="#">
+                            Let's talk about it.
+                        </a>
                     </p>
                 </div>
-
-                <div class="contacts font-sf lg:w-2/4 text-black dark:text-white text-xs">
-                    <div>
-                        <ul class="grid grid-cols-4 gap-y-3 text-xs lg:text-base items-center">
-                            <a class="instagram-footer-link" href="#">Instagram</a>
-                            <a class="youtube-footer-link" href="#">Youtube</a>
-                            <a class="dribble-footer-link" href="#">Dribble</a>
-                            <a class="linkedin-footer-link" href="#">LinkedIn</a>
-                            <a class="behance-footer-link" href="#">Behance</a>
-                            <a class="twitter-footer-link" href="#">Twitter</a>
+    
+                <div class="contacts font-sf md:w-2/4 text-black dark:text-white text-xs lg:text-sm xl:text-base">
+                    <div class="grid grid-cols-4 gap-y-3 xl:gap-y-7 text-xs lg:text-base items-center">
+                        <a class="instagram-footer-link" href="#">Instagram</a>
+                        <a class="youtube-footer-link" href="#">Youtube</a>
+                        <a class="dribble-footer-link" href="#">Dribble</a>
+                        <a class="linkedin-footer-link" href="#">LinkedIn</a>
+                        <a class="behance-footer-link" href="#">Behance</a>
+                        <a class="twitter-footer-link" href="#">Twitter</a>
                         </ul>
                     </div>
                 </div>
