--- a/src/crptly.html
+++ b/src/crptly.html
@@ -389,8 +389,7 @@
                     after testing the design out with some users
                 </p>
 
-                <p
-                    class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:mt-8">
+                <p class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:mt-8">
                     I am happy I was able to work on a project like this, I enjoyed every brainstorming session I had
                     with my partner on
                     this project as well as the audience I interviewed as everyone was truly willing to give their
@@ -398,8 +397,7 @@
                     feedback throughout the entire design process.
                 </p>
 
-                <p
-                    class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:mt-10">
+                <p class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:mt-10">
                     I would love to workon a web version of the GTBank app as that as well needs a total revamp.
                 </p>
             </div>
