--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,13 @@
       <div
         class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 xl:py-9 2xl:py-12 flex justify-between items-center tracking-widest">
         <div class="logo">
-          <p class="text-tiny lg:text-tiny xl:text-xs">
+          <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
             <a href="index.html">OZENUA OLUWATOBI</a>
           </p>
         </div>
 
-        <div class="navlist hidden lg:block lg:w-60 xl:w-72">
-          <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs">
+        <div class="navlist hidden lg:block lg:w-60 xl:w-72 2xl:w-84">
+          <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs 2xl:text-sm">
             <li><a href="#">CONTACT ME</a></li>
             <li><a href="#">CASES</a></li>
             <li><a href="#">RESUME</a></li>
@@ -49,7 +49,7 @@
       </div>
     </nav>
 
-    <section class="hero py-14 md:py-16 xl:py-20" id="hero">
+    <section class="hero py-14 md:py-16" id="hero">
       <div class="hero-container">
         <!-- Hero header for small screens -->
         <p class="hero-header-text md:hidden font-caudex dark:text-white text-5xl sm:text-6xl text-left tracking-tight">
@@ -57,30 +57,30 @@
         </p>
 
         <!-- Hero header for big screens -->
-        <p class="hero-header-text hidden md:block font-caudex dark:text-white lg:font-normal md:text-6xl lg:text-7xl xl:text-8xl text-left tracking-tight">
+        <p class="hero-header-text hidden md:block font-caudex dark:text-white lg:font-normal md:text-6xl lg:text-7xl xl:text-8xl 2xl:text-10xl text-left tracking-tight">
           Hey, I'm Ozenua.
         </p>
 
         <!-- Scroll, text and floating svg for big screens -->
-        <div class="scroll-and-text md:w-4/5 lg:w-2/3 mt-5 hidden md:flex justify-between items-center">
+        <div class="scroll-and-text md:w-4/5 lg:w-2/3 2xl:w-3/4 mt-5 hidden md:flex justify-between items-center">
           <div class="vertical-line hidden md:flex flex-col items-center">
-            <div class="vert relative md:h-56 md:w-px bg-gray-300 dark:bg-gray-900 overflow-x-hidden">
-              <div class="inner-vert absolute bottom-0 md:h-28 md:w-px bg-black dark:bg-white"></div>
+            <div class="vert relative md:h-56 2xl:h-86 md:w-px bg-gray-300 dark:bg-gray-900 overflow-x-hidden">
+              <div class="inner-vert absolute bottom-0 md:h-28 2xl:h-40 md:w-px 2xl:w-1 bg-black dark:bg-white"></div>
             </div>
 
             <div class="navigate-down md:mt-10">
-              <svg class="arrow-down w-3" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="arrow-down w-3 2xl:w-4" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M0.21967 0.71967C-0.0732233 1.01256 -0.0732233 1.48744 0.21967 1.78033L6.46967 8.03033C6.76256 8.32322 7.23744 8.32322 7.53033 8.03033L13.7803 1.78033C14.0732 1.48744 14.0732 1.01256 13.7803 0.71967C13.4874 0.426777 13.0126 0.426777 12.7197 0.71967L7 6.43934L1.28033 0.71967C0.987437 0.426777 0.512563 0.426777 0.21967 0.71967Z"
                   fill="#24292E" />
               </svg>
-              <svg class="arrow-down w-3 md:my-px lg:my-1" viewBox="0 0 14 9" fill="none"
+              <svg class="arrow-down w-3 2xl:w-4 md:my-px lg:my-1" viewBox="0 0 14 9" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M0.21967 0.71967C-0.0732233 1.01256 -0.0732233 1.48744 0.21967 1.78033L6.46967 8.03033C6.76256 8.32322 7.23744 8.32322 7.53033 8.03033L13.7803 1.78033C14.0732 1.48744 14.0732 1.01256 13.7803 0.71967C13.4874 0.426777 13.0126 0.426777 12.7197 0.71967L7 6.43934L1.28033 0.71967C0.987437 0.426777 0.512563 0.426777 0.21967 0.71967Z"
                   fill="#24292E" />
               </svg>
-              <svg class="arrow-down w-3" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="arrow-down w-3 2xl:w-4" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M0.21967 0.71967C-0.0732233 1.01256 -0.0732233 1.48744 0.21967 1.78033L6.46967 8.03033C6.76256 8.32322 7.23744 8.32322 7.53033 8.03033L13.7803 1.78033C14.0732 1.48744 14.0732 1.01256 13.7803 0.71967C13.4874 0.426777 13.0126 0.426777 12.7197 0.71967L7 6.43934L1.28033 0.71967C0.987437 0.426777 0.512563 0.426777 0.21967 0.71967Z"
                   fill="#F1F1F1" />
@@ -88,14 +88,14 @@
             </div>
           </div>
 
-          <p class="hero-details-text font-sf text-xs md:text-sm xl:text-lg text-left text-primary md:mb-5 lg:mb-10 lg:leading-7 xl:leading-8 md:w-3/5">
+          <p class="hero-details-text font-sf text-xs md:text-sm xl:text-lg 2xl:text-2xl text-left text-primary md:mb-5 lg:mb-10 lg:leading-7 xl:leading-8 2xl:leading-10 md:w-3/5 2xl:pr-5">
             I am a product designer and a design enthusiast. I love creating seamless userexperiences and digital
             user interfaces. I am passionate about solving complex problems through data-driven processes that
             translate business objectives into solutions, putting empathy for the user as a key ingredient.
           </p>
 
           <div class="floating-circle flex justify-center items-center md:mb-10 lg:mb-20">
-            <svg class="md:w-32 xl:w-40" viewBox="0 0 199 177" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="md:w-32 xl:w-40 2xl:w-56" viewBox="0 0 199 177" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M42.8722 169.863L43.4213 170.311L39.8269 174.713L37.1547 172.531L37.5583 172.036L39.6814 173.77L40.9168 172.257L38.9676 170.665L39.3662 170.177L41.3154 171.769L42.8722 169.863Z"
                 fill="#454545" />
@@ -471,78 +471,78 @@
       </div>
     </section>
 
-    <section class="featured-projects py-16 lg:py-20 font-normal" id="featured-projects">
-      <p class="font-sf text-xs lg:text-sm xl:text-base lg:tracking-widest dark:text-white">FEATURED PROJECTS</p>
+    <section class="featured-projects py-16 lg:py-20 xl:py-24 font-normal" id="featured-projects">
+      <p class="font-sf text-xs lg:text-sm xl:text-base 2xl:text-lg lg:tracking-widest dark:text-white">FEATURED PROJECTS</p>
 
-      <p class="projects-big-text font-caudex text-light text-lg5xl sm:text-lg7xl md:text-9xl lg:text-11xl xl:text-12xl sm:-mt-3 md:-mt-5 lg:-mt-7 xl:-mt-10 md:tracking-tighter dark:text-dark">
+      <p class="projects-big-text font-caudex text-light text-lg5xl sm:text-lg7xl md:text-9xl lg:text-11xl xl:text-12xl 2xl:text-13xl sm:-mt-3 md:-mt-5 lg:-mt-7 xl:-mt-10 md:tracking-tighter dark:text-dark">
         PROJECTS
       </p>
 
       <div class="scroll-and-projects flex justify-between mt-16 lg:pt-20 lg:pb-20">
-        <div class="vertical-scroll relative h-40 md:h-56 xl:h-64 w-px bg-gray-300 dark:bg-gray-900 overflow-x-hidden">
-          <div class="inner-vertical-scroll absolute top-0 h-20 md:h-28 xl:h-32 w-px bg-black dark:bg-white"></div>
+        <div class="vert relative md:h-56 2xl:h-86 md:w-px bg-gray-300 dark:bg-gray-900 overflow-x-hidden">
+          <div class="inner-vert absolute top-0 md:h-28 2xl:h-40 md:w-px 2xl:w-1 bg-black dark:bg-white"></div>
         </div>
 
-        <div class="projects space-y-10 xl:space-y-28 sm:space-y-14 w-3/4">
+        <div class="projects space-y-10 xl:space-y-28 2xl:space-y-36 sm:space-y-14 w-3/4">
           <div class="jumiar lg:mb-0">
-            <p class="num font-caudex text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl">01</p>
+            <p class="num font-caudex text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">01</p>
 
             <p
-              class="juimar-header-text font-caudex my-2 md:pb-3 lg:pb-5 text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl tracking-tighter dark:text-white">
+              class="juimar-header-text font-caudex my-2 md:pb-3 lg:pb-5 text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl 2xl:text-lg6xl tracking-tighter dark:text-white">
               <a href="jumiar.html">
                 JUMIAR
               </a>
             </p>
 
-            <p class="juimar-subtext font-sf text-primary text-xs lg:text-xs xl:text-base">
+            <p class="juimar-subtext font-sf text-primary text-xs lg:text-xs xl:text-base 2xl:text-lg">
               A new experience to online shopping.
             </p>
 
           </div>
 
           <div class="gtworld lg:mb-0">
-            <p class="num font-caudex text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl">02</p>
+            <p class="num font-caudex text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">02</p>
 
             <p
-              class="gtworld-header-text font-caudex my-2 md:pb-3 lg:pb-5 text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl tracking-tighter dark:text-white">
+              class="gtworld-header-text font-caudex my-2 md:pb-3 lg:pb-5 text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl 2xl:text-lg6xl tracking-tighter dark:text-white">
               <a href="gtworld.html">
                 GTWorld Banking App
               </a>
             </p>
 
-            <p class="gtworld-subtext font-sf text-primary text-xs lg:text-xs xl:text-base">
+            <p class="gtworld-subtext font-sf text-primary text-xs lg:text-xs xl:text-base 2xl:text-lg">
               A new experience to online banking.
             </p>
 
           </div>
 
           <div class="crptly lg:mb-0">
-            <p class="num font-caudex text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl">03</p>
+            <p class="num font-caudex text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">03</p>
 
             <p
-              class="crptly-header-text font-caudex my-2 md:pb-3 lg:pb-5 text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl tracking-tighter dark:text-white">
+              class="crptly-header-text font-caudex my-2 md:pb-3 lg:pb-5 text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl 2xl:text-lg6xl tracking-tighter dark:text-white">
               <a href="crptly.html">
                 Crptly
               </a>
             </p>
 
-            <p class="crptly-subtext font-sf text-primary text-xs lg:text-xs xl:text-base">
+            <p class="crptly-subtext font-sf text-primary text-xs lg:text-xs xl:text-base 2xl:text-lg">
               Crypto application for the new.
             </p>
 
           </div>
 
           <div class="paysure lg:mb-0">
-            <p class="num font-caudex text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl">04</p>
+            <p class="num font-caudex text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">04</p>
 
             <p
-              class="paysure-header-text font-caudex my-2 md:pb-3 lg:pb-5 text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl tracking-tighter dark:text-white">
+              class="paysure-header-text font-caudex my-2 md:pb-3 lg:pb-5 text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl 2xl:text-lg6xl tracking-tighter dark:text-white">
               <a href="paysure.html">
                 Paysure
               </a>
             </p>
 
-            <p class="paysure-subtext font-sf text-primary text-xs lg:text-xs xl:text-base">
+            <p class="paysure-subtext font-sf text-primary text-xs lg:text-xs xl:text-base 2xl:text-lg">
               A new experience to online banking.
             </p>
 
@@ -550,26 +550,26 @@
         </div>
       </div>
 
-      <div class="community-quote flex justify-between mt-20 md:mt-24 xl:mt-32 md:px-20 lg:px-32 xl:px-20">
-        <svg class="w-8 md:w-9 lg:w-10 xl:w-16 mb-5 md:mb-7 lg:mb-10" viewBox="0 0 69 49" fill="none"
+      <div class="community-quote flex justify-between mt-20 md:mt-24 xl:mt-32 2xl:mt-40 md:px-20 lg:px-32 xl:px-20">
+        <svg class="w-8 md:w-9 lg:w-10 xl:w-16 2xl:w-20 mb-5 md:mb-7 lg:mb-10" viewBox="0 0 69 49" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path
             d="M0.528643 39.7799V38.8943L1.02064 30.5305C1.08624 29.4153 1.61103 27.5785 2.59501 25.0202C5.80936 15.2459 11.9429 7.76761 20.9955 2.58529C22.8979 1.14211 24.6363 0.420521 26.2107 0.420521C27.457 0.48612 28.605 0.912513 29.6546 1.6997C29.917 2.15889 30.0482 2.61809 30.0482 3.07728C30.0482 3.79887 29.753 4.45486 29.1626 5.04525C28.3098 5.96364 26.8995 6.94762 24.9315 7.99721C18.3716 11.474 14.3044 16.2955 12.7301 22.4618C19.8804 22.921 23.4555 25.8729 23.4555 31.3177V31.9081L22.8651 40.2719C22.4059 45.4543 18.5028 48.1766 11.1557 48.439C4.07099 47.9798 0.528643 45.0935 0.528643 39.7799ZM38.8057 39.7799V38.8943L39.2977 30.5305C39.3633 29.4153 39.7897 27.7753 40.5768 25.6105L42.5448 20.789C45.8248 13.3763 51.4007 7.30842 59.2726 2.58529C61.1749 1.14211 62.9461 0.420521 64.5861 0.420521C65.8325 0.48612 66.9477 0.912513 67.9316 1.6997C68.2596 2.22449 68.4236 2.71649 68.4236 3.17568C68.4236 3.83167 68.1284 4.45486 67.538 5.04525C66.6197 5.96364 65.1765 6.94762 63.2085 7.99721C56.6486 11.474 52.5815 16.2955 51.0071 22.4618C58.1574 22.921 61.7325 25.8401 61.7325 31.2193V31.9081L61.2405 40.2719C60.7813 45.7822 57.3702 48.5374 51.0071 48.5374C50.4167 48.4718 49.8919 48.439 49.4327 48.439C42.348 48.439 38.8057 45.5526 38.8057 39.7799Z"
             fill="#18161D" />
         </svg>
 
-        <div class="text-center space-y-2 xl:space-y-5 w-4/5 px-5">
-          <p class="top uppercase text-tiny md:text-xs xl:text-lg tracking-widest dark:text-white">
+        <div class="text-center space-y-2 xl:space-y-5 w-4/5 px-5 xl:px-10">
+          <p class="top uppercase text-tiny md:text-xs xl:text-lg 2xl:text-xl tracking-widest dark:text-white">
             online design community builder
           </p>
 
-          <p class="bottom text-sm sm:text-base md:text-lg xl:text-lg3xl text-primary lg:leading-7 xl:leading-10 lg:pt-3">
+          <p class="bottom text-sm sm:text-base md:text-lg xl:text-lg3xl 2xl:text-4xl text-primary lg:leading-7 xl:leading-10 2xl:leading-snug lg:pt-3">
             I have also contributed immensely to the online design
             community with asset files, online videos and articles.
           </p>
         </div>
 
-        <svg class="w-8 md:w-9 lg:w-10 xl:w-16 mb-5 md:mb-7 lg:mb-10" viewBox="0 0 69 49" fill="none"
+        <svg class="w-8 md:w-9 lg:w-10 xl:w-16 2xl:w-20 mb-5 md:mb-7 lg:mb-10" viewBox="0 0 69 49" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path
             d="M68.4714 39.7799V38.8943L67.9794 30.5305C67.9138 29.4153 67.389 27.5785 66.405 25.0202C63.1906 15.2459 57.0571 7.76761 48.0045 2.58529C46.1021 1.14211 44.3637 0.420521 42.7893 0.420521C41.543 0.48612 40.395 0.912513 39.3454 1.6997C39.083 2.15889 38.9518 2.61809 38.9518 3.07728C38.9518 3.79887 39.247 4.45486 39.8374 5.04525C40.6902 5.96364 42.1005 6.94762 44.0685 7.99721C50.6284 11.474 54.6956 16.2955 56.2699 22.4618C49.1196 22.921 45.5445 25.8729 45.5445 31.3177V31.9081L46.1349 40.2719C46.5941 45.4543 50.4972 48.1766 57.8443 48.439C64.929 47.9798 68.4714 45.0935 68.4714 39.7799ZM30.1943 39.7799V38.8943L29.7023 30.5305C29.6367 29.4153 29.2103 27.7753 28.4232 25.6105L26.4552 20.789C23.1752 13.3763 17.5993 7.30842 9.72743 2.58529C7.82506 1.14211 6.05388 0.420521 4.41391 0.420521C3.16753 0.48612 2.05234 0.912513 1.06836 1.6997C0.740364 2.22449 0.576366 2.71649 0.576366 3.17568C0.576366 3.83167 0.871562 4.45486 1.46195 5.04525C2.38034 5.96364 3.82352 6.94762 5.79149 7.99721C12.3514 11.474 16.4185 16.2955 17.9929 22.4618C10.8426 22.921 7.26747 25.8401 7.26747 31.2193V31.9081L7.75946 40.2719C8.21865 45.7822 11.6298 48.5374 17.9929 48.5374C18.5833 48.4718 19.1081 48.439 19.5673 48.439C26.652 48.439 30.1943 45.5526 30.1943 39.7799Z"
@@ -579,19 +579,19 @@
     </section>
   </div>
 
-  <section class="contributions py-16 lg:py-20 xl:py-28" id="contributions">
+  <section class="contributions py-16 lg:py-20 xl:py-28 2xl:py-36" id="contributions">
     <div class="container mx-auto overflow-x-hidden pl-7 sm:pl-14 md:pl-16 lg:pl-24 xl:pl-28 2xl:pl-32">
-      <p class="contribution-header-text font-sf text-xs lg:text-sm xl:text-base lg:tracking-widest dark:text-white">
+      <p class="contribution-header-text font-sf text-xs lg:text-sm xl:text-base 2xl:text-xl lg:tracking-widest dark:text-white">
         CONTRIBUTIONS
       </p>
 
-      <p class="contribution-text font-caudex text-5xl sm:text-lg7xl md:text-9xl lg:text-11xl xl:text-12xl md:tracking-tighter sm:-mt-3 md:-mt-5 lg:-mt-7 xl:-mt-10 text-light dark:text-dark">
+      <p class="contribution-text font-caudex text-5xl sm:text-lg7xl md:text-9xl lg:text-11xl xl:text-12xl 2xl:text-13xl md:tracking-tighter sm:-mt-3 md:-mt-5 lg:-mt-7 xl:-mt-10 text-light dark:text-dark">
         CONTRIBUTIONS
       </p>
 
       <div class="grid-div overflow-x-hidden w-full flex-nowrap mt-10 lg:mt-16 space-y-7 md:space-y-0 md:flex justify-between md:space-x-10 lg:space-x-24 pr-7 sm:pr-14 md:pr-0">
-        <div class="presently md:min-w-4 lg:min-w-min xl:max-w-4">
-          <div class="presently-container md:w-80 lg:w-84 xl:w-96 p-7 lg:p-7 xl:p-10">
+        <div class="presently md:min-w-4 lg:min-w-min">
+          <div class="presently-container md:w-80 lg:w-84 xl:w-96 2xl:w-100 p-7 lg:p-7 xl:p-10">
             <a href="#">
               <svg class="w-3 sm:w-4 lg:w-5 xl:w-7" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -660,7 +660,7 @@
           </div>
         </div>
 
-        <div class="desktop-mockup md:min-w-4 lg:min-w-min lg:max-w-none">
+        <div class="desktop-mockup md:min-w-4 lg:min-w-min">
           <div class="desktop-mockup-container md:w-80 lg:w-84 xl:w-96 lg:h-72 p-7 lg:p-7 xl:p-10">
             <a href="#">
               <svg class="w-3 sm:w-4 lg:w-5 xl:w-7" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
